# renju

./: .gitignore  CMakeLists.txt  main.cpp  parameters.txt  run_client.cpp  run_server.cpp
core/: action.h  action.hpp  common.h  context.cc  context.cpp  context.h  context.hpp  network.hpp  parameters.cpp  parameters.h  parameters.hpp  renju_action.cpp  renju_action.h  renju_context.cpp  renju_context.h  state.cpp  state.h  state.hpp
io/: io.hpp
mcts/: mcts.cpp  mcts.h  mcts.hpp  mcts_client.cpp  mcts_client.h  node.cpp  node.h  thread_pool.h  tree.cpp  tree.h  tree.hpp
network/: NetServer.cpp  NetServer.h  net.cc  net.h  network.cpp  network.h  network.hpp  server.cpp  server.h
proto/: beta.pb.cc  beta.pb.h  beta.proto
test/: test_caffe2.cc  test_example.cc  test_graphviz.cc  test_mcts.cc  test_network.cc  test_random.cc  test_tree.cc  toy.cc
utils/: graphviz.hpp  simple_queue.h  simple_queue_test.cc  utils.hpp
